apps/base/zabbix/controllers/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zabbix
  namespace: zabbix
  annotations:
    external-dns.alpha.kubernetes.io/target: cluster.benwoodward.cloud.
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - zabbix.benwoodward.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zabbix-zabbix-web
          port: 80
